--- a/Laba1/Views/DepartmentsAndPostsOfWorkers/Details.cshtml
+++ b/Laba1/Views/DepartmentsAndPostsOfWorkers/Details.cshtml
@@ -5,17 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Подробнее</h1>
 
 <div>
-    <h4>DepartmentsAndPostsOfWorker</h4>
+   
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Worker)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Worker.Middlename)
+            @Html.DisplayFor(model => model.Worker.Surname) @Html.DisplayFor(model => model.Worker.Name) @Html.DisplayFor(model => model.Worker.Middlename)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Department)
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Изменить</a> |
+    <a asp-controller="Workers" asp-action="Intelligence" asp-route-id="@Model.WorkerId">Вернуться назад</a>
 </div>
