--- a/Laba1/Views/Workers/Index.cshtml
+++ b/Laba1/Views/Workers/Index.cshtml
@@ -1,90 +1,49 @@
-﻿@model IEnumerable<Laba1.Models.Worker>
+﻿@model IEnumerable<Laba1.Models.DepartmentsAndPostsOfWorker>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link rel="stylesheet" href="~/css/styleWorkerIndex.css"/>
 @if (User.IsInRole("admin") || User.IsInRole("coach") || User.IsInRole("guest"))
 {
-    
 
 
-<h1>Работники</h1>
 
-<p>
-    <a asp-action="Create">Добавить работника</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Surname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Middlename)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Gender)
-            </th>
-         
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Middlename)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
-        
-                @if (User.IsInRole("admin"))
-                {
-                <td>
-                  
-                <a asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
-                <a asp-action="Intelligence" style="color: green" asp-route-id="@item.Id">Сведения</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a> |
-                
-                </td>
-                }
-                else if (User.IsInRole("coach"))
-                {
-                <td>
-                    <a asp-action="Intelligence" style="color: green" asp-route-id="@item.Id">Сведения</a>
-                </td>
-                }
-                else
-                {
-                    
-                }
-        </tr>
-}
-    </tbody>
-    </table>
+    <h3 style="text-align:center;">Наш персонал</h3>
+
+    <hr style="width:100px; margin: auto;" />
+
+    <p style="text-align:center;">
+        <a  asp-action="Create">Добавить сотрудника</a>
+    </p>
+    //@Html.DisplayFor(modelItem => item.Name)
+    <div class="middle">
+    @foreach (var item in Model)
+    {
+           
+      <a asp-action="Intelligence" asp-route-id="@item.WorkerId" style="text-decoration:none; color:black;">
+        <div class="boxWorker">
+
+            <div class="photoWorker">
+                        <input type="hidden" name="Photo" value="@item.Worker.Photo" />
+                        @if (ViewBag.Photodata != null)
+                        {
+                            <img class="photo" width="150" src="data:image/jpeg;base64,@(Convert.ToBase64String(ViewBag.Photodata))">
+                        }
+            </div>
+                <div class="nameWorker"> @Html.DisplayFor(modelItem => item.Worker.Name) @Html.DisplayFor(modelItem => item.Worker.Surname)</div>
+                    <div class="postWorker">@Html.DisplayFor(modelItem => item.Post.Title)</div>
+                    <div class="phoneWorker">@Html.DisplayFor(modelItem => item.Worker.Phone)</div>
+        </div>
+      </a>
+    }
+    </div>
 }
 else
 {
     <div class="text-center">
         <h1 class="display-4">Авторизируйтесь, <br> чтобы просмотреть данные</h1>
-       
+
     </div>
 }
