--- a/Laba1/Views/DepartmentsAndPostsOfWorkers/Delete.cshtml
+++ b/Laba1/Views/DepartmentsAndPostsOfWorkers/Delete.cshtml
@@ -5,18 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Удаление</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить данную запись?</h3>
 <div>
-    <h4>DepartmentsAndPostsOfWorker</h4>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Worker)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Worker.Middlename)
+            @Html.DisplayFor(model => model.Worker.Surname) @Html.DisplayFor(model => model.Worker.Name) @Html.DisplayFor(model => model.Worker.Middlename)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Department)
@@ -34,7 +34,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-controller="Workers" asp-action="Intelligence" asp-route-id="@Model.WorkerId">Вернуться назад</a>
     </form>
 </div>
