--- a/Laba1/Views/Home/Index.cshtml
+++ b/Laba1/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
-﻿@{
+﻿@model IEnumerable<Laba1.Models.Department>
+
+@{
     ViewData["Title"] = "Home Page";
+    string address = "";
 }
+
+<meta charset="utf-8">
+<script src="/js/intlTelInput.min.js" charset="utf-8"></script>
+
+
 
 <div class="text-center">
     <h1 class="display-4">Добро пожаловать!</h1>
     <p>Сайт, предназначенный для внутреннего пользования отдела кадров.</p>
+    <br />
+    <h3 class="display-5">Отделы компании</h3>
+
+    <div class="middle">
+        
+    @foreach (var item in Model)
+    {
+          
+            
+            <a asp-controller="Departments" asp-action="Details" asp-route-id="@item.Id" class="boxDepLink">
+       <div class="boxDepartment">
+           <div class="logoDepartment">
+               
+               <div class="nameDepartment"> @Html.DisplayFor(modelItem => item.Name)</div>
+           </div>
+           <div  class="mapAdress">
+                      
+           </div>
+           
+
+       </div>
+       </a>
+    }
+    </div>
 </div>
+
+
+
