--- a/Laba1/Views/Workers/Create.cshtml
+++ b/Laba1/Views/Workers/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -41,7 +41,11 @@
                     <option value="Женский">Женский</option>
                 </select>
             </div>
-         
+            <div class="form-group">
+                <div class="mt-4">
+                    <input type="file" name="upload" class="form-control" /><br>
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Добавить" style="margin-top: 20px" class="btn btn-primary" />
             </div>
