--- a/Laba1/Views/Workers/Delete.cshtml
+++ b/Laba1/Views/Workers/Delete.cshtml
@@ -11,8 +11,9 @@
 <div>
     <h4>Сотрудник</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <div style="margin-left:100px; position:absolute;">
+    <dl class="row" >
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
@@ -42,8 +43,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Gender)
         </dd>
-      
+        @*<dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Photo)
+        </dt>*@
     </dl>
+    </div>
+    <input type="hidden" name="Photo" value="@Model.Photo" />
+    @if (ViewBag.Photodata != null)
+    {
+        <img class="mt-4 mb-4" width="200"
+             src="data:image/jpeg;base64,@(Convert.ToBase64String(ViewBag.Photodata))">
+    }
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
