--- a/Laba1/Views/Workers/Edit.cshtml
+++ b/Laba1/Views/Workers/Edit.cshtml
@@ -11,7 +11,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
+            
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -43,6 +44,18 @@
                 </select>
             </div>
            
+            <input type="hidden" name="Photo" value="@Model.Photo" />
+            @if (ViewBag.Photodata != null)
+            {
+                <img class="mt-4 mb-4" width="200"
+                     src="data:image/jpeg;base64,@(Convert.ToBase64String(ViewBag.Photodata))">
+            }
+            <div class="form-group">
+                <div class="mt-4">
+                    <input type="file" name="upload" class="form-control" /><br>
+                </div>
+            </div>
+
             <div class="form-group">
                 <input style="margin-top:10px" type="submit" value="Изменить" class="btn btn-primary" />
             </div>
@@ -51,7 +64,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Вернуться назад</a>
+    <a  asp-action="Index">Вернуться назад</a>
 </div>
 
 @section Scripts {
