--- a/Laba1/Views/Workers/Intelligence.cshtml
+++ b/Laba1/Views/Workers/Intelligence.cshtml
@@ -39,8 +39,16 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.worker.Gender)
         </dd>
-        
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.worker.Photo)
+        </dt>
     </dl>
+    <input type="hidden" name="Photo" value="@Model.worker.Photo" />
+    @if (ViewBag.Photodata != null)
+    {
+        <img class="mt-4 mb-4" width="200"
+             src="data:image/jpeg;base64,@(Convert.ToBase64String(ViewBag.Photodata))">
+    }
     @if (User.IsInRole("admin"))
     {
 
@@ -96,9 +104,15 @@
 
                             @if (User.IsInRole("admin"))
                             {
-                                <td>
+                           
                             
-                            </td>
+                                <td>
+                                <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> |
+                                <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
+                                <a asp-controller="DepartmentsAndPostsOfWorkers" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                                </td>
+                            
+                            
                         }
                         else
                         {
