--- a/Laba1/Views/Departments/Create.cshtml
+++ b/Laba1/Views/Departments/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="idAdressDepartment" class="control-label"></label>
-                <select asp-for="idAdressDepartment" class="form-select" asp-items="ViewBag.idAdressDepartment"></select>
+                <select asp-for="idAdressDepartment" class="form-select" asp-items="@ViewBag.idAdressDepartment"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Создать" style="margin-top:20px" class="btn btn-primary" />
